service-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service-clusterip
  namespace: asd
spec:
  selector:
    app: first-task
  type: ClusterIP
  ports:
  - protocol: TCP
    name: clust
    port: 80
    targetPort: 3000
