service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-task-service
spec:
  selector:
    app: first-task
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
